--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/me.jvt.cucumber/reporting-plugin -->
+		<dependency>
+			<groupId>me.jvt.cucumber</groupId>
+			<artifactId>reporting-plugin</artifactId>
+			<version>7.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
